--- a/.popper.yml
+++ b/.popper.yml
@@ -1,4 +1,4 @@
-badge-server-url: http://badge:
+badge-server-url: http://badges.falsifiable.us
 metadata:
   access_right: open
   license: CC-BY-4.0
